[gd_scene load_steps=3 format=3 uid="uid://d2l0kayrxoy6c"]

[ext_resource type="Script" path="res://scenes/levels/main_menu/laod.gd" id="1_0qxj1"]
[ext_resource type="FontFile" uid="uid://c15qulsl5wbmb" path="res://assets/fonts/RussoOne-Regular.ttf" id="1_rwa7c"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0qxj1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.447059, 0.682353, 0.380392, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -540.0
offset_top = -488.0
offset_right = 599.0
offset_bottom = -399.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_rwa7c")
theme_override_font_sizes/font_size = 72
text = "Продолжить с какого уровня?"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 256.0
offset_top = 192.0
offset_right = 512.0
offset_bottom = 448.0
theme_override_fonts/font = ExtResource("1_rwa7c")
theme_override_font_sizes/font_size = 114
text = "2"

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 640.0
offset_top = 192.0
offset_right = 896.0
offset_bottom = 448.0
theme_override_fonts/font = ExtResource("1_rwa7c")
theme_override_font_sizes/font_size = 114
text = "3"

[node name="Button4" type="Button" parent="."]
layout_mode = 0
offset_left = 1024.0
offset_top = 192.0
offset_right = 1280.0
offset_bottom = 448.0
theme_override_fonts/font = ExtResource("1_rwa7c")
theme_override_font_sizes/font_size = 114
text = "4"

[node name="Button5" type="Button" parent="."]
layout_mode = 0
offset_left = 1408.0
offset_top = 192.0
offset_right = 1664.0
offset_bottom = 448.0
theme_override_fonts/font = ExtResource("1_rwa7c")
theme_override_font_sizes/font_size = 114
text = "5"

[node name="Button6" type="Button" parent="."]
layout_mode = 0
offset_left = 256.0
offset_top = 576.0
offset_right = 512.0
offset_bottom = 832.0
theme_override_fonts/font = ExtResource("1_rwa7c")
theme_override_font_sizes/font_size = 114
text = "6"

[node name="Button7" type="Button" parent="."]
layout_mode = 0
offset_left = 640.0
offset_top = 576.0
offset_right = 896.0
offset_bottom = 832.0
theme_override_fonts/font = ExtResource("1_rwa7c")
theme_override_font_sizes/font_size = 114
text = "7"

[node name="Button8" type="Button" parent="."]
layout_mode = 0
offset_left = 1024.0
offset_top = 576.0
offset_right = 1280.0
offset_bottom = 832.0
theme_override_fonts/font = ExtResource("1_rwa7c")
theme_override_font_sizes/font_size = 114
text = "8"

[node name="Button9" type="Button" parent="."]
layout_mode = 0
offset_left = 1408.0
offset_top = 576.0
offset_right = 1664.0
offset_bottom = 832.0
theme_override_fonts/font = ExtResource("1_rwa7c")
theme_override_font_sizes/font_size = 114
text = "9"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 818.0
offset_top = 887.0
offset_right = 1154.0
offset_bottom = 1007.0
theme_override_fonts/font = ExtResource("1_rwa7c")
theme_override_font_sizes/font_size = 50
text = "Назад"

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 256.0
offset_top = 192.0
offset_right = 513.0
offset_bottom = 449.0
color = Color(0.239216, 0.239216, 0.239216, 1)

[node name="ColorRect3" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 641.0
offset_top = 192.0
offset_right = 898.0
offset_bottom = 449.0
color = Color(0.239216, 0.239216, 0.239216, 1)

[node name="ColorRect4" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 1025.0
offset_top = 191.0
offset_right = 1282.0
offset_bottom = 448.0
color = Color(0.239216, 0.239216, 0.239216, 1)

[node name="ColorRect5" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 1410.0
offset_top = 190.0
offset_right = 1667.0
offset_bottom = 447.0
color = Color(0.239216, 0.239216, 0.239216, 1)

[node name="ColorRect6" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 256.0
offset_top = 577.0
offset_right = 513.0
offset_bottom = 834.0
color = Color(0.239216, 0.239216, 0.239216, 1)

[node name="ColorRect7" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 641.0
offset_top = 575.0
offset_right = 898.0
offset_bottom = 832.0
color = Color(0.239216, 0.239216, 0.239216, 1)

[node name="ColorRect8" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 1023.0
offset_top = 575.0
offset_right = 1280.0
offset_bottom = 832.0
color = Color(0.239216, 0.239216, 0.239216, 1)

[node name="ColorRect9" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 1410.0
offset_top = 577.0
offset_right = 1667.0
offset_bottom = 834.0
color = Color(0.239216, 0.239216, 0.239216, 1)

[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="Button6" to="." method="_on_button_6_pressed"]
[connection signal="pressed" from="Button7" to="." method="_on_button_7_pressed"]
[connection signal="pressed" from="Button8" to="." method="_on_button_8_pressed"]
[connection signal="pressed" from="Button9" to="." method="_on_button_9_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
